couleur des boutons//redirection pages dynamique

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,9 +15,9 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li class="nav" id="index-button">projets</li>
+			<li class="nav">contact</li>
+			<li class="nav" id="login-button">login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
