--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,7 +28,7 @@
 	<section id="contact">
 		
 	
-		<form action="#" method="post" id="login-form">
+		<form id="login-form">
             <h2 id="login">log in</h2>
 			<label id="email" for="email">Email</label>
 			<input type="email" name="email" id="email">
@@ -47,7 +47,7 @@
 		</ul>
 	</nav>
 </footer>
-<script src="assets/script.js"></script>
+<script src="assets/login.js"></script>
 </body>
 
 </html>
