--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="index.html">projets</a></li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="#" id="auth-link">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -30,11 +30,11 @@
 	
 		<form id="login-form">
             <h2 id="login">log in</h2>
-			<label id="email" for="email">Email</label>
+			<label for="email">Email</label>
 			<input type="email" name="email" id="email">
 			<label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
-			<input type="submit" value="Se connecter" id="connect-button">
+			<input type="submit" value="Se connecter" name="submit" id="connect-button">
             <a class="forgotten-password" href="">Mot de passe oublié</a>
 		</form>
 	</section>
