Suppression des filtres à la connexion

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,6 +53,9 @@
 		<div class="modal-main-display">
 		
 		</div>
+		<div class="button container">
+         <button class="modal-add-button">Ajouter une photo</button>
+		</div>
 		</div>
 	  </div>
 
