Ajout bouton et border modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,11 +51,11 @@
 		  <h3 class="modale-title">Galerie photo</h3>
 		</div>
 		<div class="modal-main-display">
-		
 		</div>
-		<div class="button container">
+		<div class="modal-border">
+		</div>
          <button class="modal-add-button">Ajouter une photo</button>
-		</div>
+		
 		</div>
 	  </div>
 
