Projet avant refactorisation

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,8 +20,8 @@
 		<nav>
 			<ul>
 				<li class="nav" id="index-button">projets</li>
-				<li class="nav">contact</li>
-				<li class="nav" id="login-button"><a href="#" id="authentification">login</a></li>
+				<li class="nav"><a href="#contact">contact</a></li>
+				<li class="nav" id="login-button"><a href="#" id="authentification">log in</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
