--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,7 +22,7 @@
 				<li class="nav" id="index-button">projets</li>
 				<li class="nav"><a href="#contact">contact</a></li>
 				<li class="nav" id="login-button"><a href="#" id="authentification">log in</a></li>
-				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+				<li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -97,7 +97,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="assets/script.js"></script>
+	<script src="assets/script.js" defer></script>
 </body>
 
 </html>
