Projet prêt avant séparation modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -75,7 +75,7 @@
 			<h2>Contact</h2>
 			<p>Vous avez un projet ? Discutons-en !</p>
 			<form action="#" method="post" class="sign-in">
-				<label for="name">Nom</label>
+				<label for="name" id="contact-id">Nom</label>
 				<input type="text" name="name" id="name">
 				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
