--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,7 +97,8 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="assets/script.js" defer></script>
+	<script type="module" src="assets/script.js"></script>
+	<script type="module" src="assets/modale.js"></script>
 </body>
 
 </html>
