--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,7 +22,8 @@
 				<li class="nav" id="index-button">projets</li>
 				<li class="nav"><a href="#contact">contact</a></li>
 				<li class="nav" id="login-button"><a href="#" id="authentification">log in</a></li>
-				<li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
+				<li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><img
+							src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 			</ul>
 		</nav>
 	</header>
