--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+		rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li><a href="index.html">projets</a></li>
-			<li>contact</li>
-			<li><a href="#" id="auth-link">login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	
-	
-	<section id="contact">
-		
-	
-		<form id="login-form">
-            <h2 id="login">log in</h2>
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="password">Mot de passe</label>
-			<input type="password" name="password" id="password">
-			<input type="submit" value="Se connecter" name="submit" id="connect-button">
-            <a class="forgotten-password" href="">Mot de passe oublié</a>
-		</form>
-	</section>
-</main>
 
-<footer id="footer">
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
-<script src="assets/login.js"></script>
+<body>
+	<header>
+		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">projets</a></li>
+				<li>contact</li>
+				<li><a href="#" id="auth-link">login</a></li>
+				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+
+
+		<section id="contact">
+
+
+			<form id="login-form">
+				<h2 id="login">log in</h2>
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email">
+				<label for="password">Mot de passe</label>
+				<input type="password" name="password" id="password">
+				<input type="submit" value="Se connecter" name="submit" id="connect-button">
+				<a class="forgotten-password" href="">Mot de passe oublié</a>
+			</form>
+		</section>
+	</main>
+
+	<footer id="footer">
+		<nav>
+			<ul>
+				<li>Mentions Légales</li>
+			</ul>
+		</nav>
+	</footer>
+	<script src="assets/login.js"></script>
 </body>
 
 </html>
